# poa

./: .gitignore  CMakeLists.txt  README.md
src/: alignment.cpp  alignment.hpp  graph.cpp  graph.hpp  poa.cpp
